# sequence-edits

./: .gitignore  Justfile  README.md  js.ipynb  pyproject.toml  python.ipynb  requirements.txt
dev/: edits.ipynb
js/: README.md  package.json
js/src/: index.ts  main.ts
python/: Justfile
src/sequence_edits/: __init__.py  main.py
src/sequence_edits/models/: __init__.py  models.py
