[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-edits"
version = "0.1.2"
authors = [
    {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Tools for encoding/decoding sequence editions (insertions/deletions) in compact format"
dependencies = [
    "ramda", "pydantic"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
